[RBOY-80] Fix letter spacing for Page Title

--- a/src/scss/modules/_headerbanner.scss
+++ b/src/scss/modules/_headerbanner.scss
@@ -2,6 +2,10 @@
 .banner-zone-node {
   position: relative;
 
+  h1 {
+    letter-spacing: 0;
+  }
+
   .banner--medium {
     .banner-cta {
       bottom: 0;
@@ -21,17 +25,20 @@
   }
 
   .banner-bg {
-    min-height: 500px;
-    height: 100%;
     bottom: 0;
     left: 0;
     position: absolute;
     right: 0;
     top: 0;
     z-index: 1;
-    @media (max-width: 991px) {
+
+    @media (min-width: 768px) {
       min-height: auto;
     }
+
+    @media (min-width: 576px) {
+        min-height: auto;
+      }
   }
 }
 
